--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
 
                 // Make AJAX request
                 $.ajax({
-                    url: "http://localhost:5000/prediction",
+                    url: "/prediction",
                     type: "POST",
                     data: formData,
                     timeout: 10000,
